--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.fic.cursoandroid">
+    package="com.fic.cursoandroid" >
 
     <application
         android:allowBackup="true"
@@ -8,23 +8,29 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.CursoAndroid">
+        android:theme="@style/Theme.CursoAndroid" >
         <activity
-            android:name=".MainActivity3"
+            android:name=".capapresentacion.Student.AddStudentActivity"
             android:exported="true" />
         <activity
-            android:name=".MainActivity2"
-            android:exported="true">
-            <!--<intent-filter>
+            android:name=".capapresentacion.MainActivity3"
+            android:exported="true" />
+        <activity
+            android:name=".capapresentacion.MainActivity2"
+            android:exported="true" >
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
         <activity
-            android:name=".MainActivity"
-            android:theme="@style/Theme.CursoAndroid.NoActionBar"
-            android:exported="true">
+            android:name=".capapresentacion.Main.MainActivity"
+            android:exported="true"
+            android:theme="@style/Theme.CursoAndroid.NoActionBar" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
