--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.CursoAndroid">
         <activity
+            android:name=".capapresentacion.Student.UpdateStudentActivity"
+            android:exported="true" />
+        <activity
             android:name=".capapresentacion.Student.StudentsActivity"
             android:exported="true">
             <intent-filter>
@@ -40,12 +43,15 @@
             android:name=".capapresentacion.Main.MainActivity"
             android:exported="true"
             android:theme="@style/Theme.CursoAndroid.NoActionBar">
-            <!--<intent-filter>
+
+            <!--
+            <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>-->
+            </intent-filter>
+            -->
         </activity>
     </application>
 
